--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,157 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="fieldset">
+        <legend>Personal information</legend>
+        <label for="surname">
+          Surname:
+          <input 
+            type="text" 
+            name="surname" 
+            id="surname"
+           >
+        </label>
+        <label for="name">
+          Name:
+          <input 
+            type="text" 
+            name="name" 
+            id="name"
+          >
+        </label>
+        <label for="old">
+          How old are You?
+          <input 
+            type="number" 
+            name="old" 
+            id="old"
+            value="12"
+            min="1"
+            max="100"
+          >
+        </label>
+        <label for="date">
+          Full date of birth:
+          <input 
+            type="date" 
+            name="date" 
+            id="date"
+          >
+        </label>
+        <label class="last" for="checkbox">
+          I accept the term of the agreement
+          <input 
+            type="checkbox" 
+            name="checkbox" 
+            id="checkbox"
+            required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>Registration</legend>
+        <label for="email">
+          E-mail:
+          <input 
+            type="email" 
+            name="email" 
+            id="email"
+            placeholder="email@example.com"
+          >
+        </label>
+        <label class="last" for="pass">
+          Password:
+          <input 
+            type="password" 
+            name="pass" 
+            id="pass"
+            minlength="6"
+            maxlength="12"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>An interesting fact about you!</legend>
+        <div>
+          <label class="inline">
+            Do you love cats?
+            <label class="inline" >
+              <input
+                type="radio" 
+                name="love" 
+                id="yes"
+              >
+              Yes
+            </label>
+            <label class="inline">
+              <input 
+                type="radio" 
+                name="love" 
+                id="no"
+              >
+              No
+            </label>
+          </label>
+        </div>
+        <label for="color">
+          What is your favorite color?
+          <input 
+            type="color" 
+            name="color" 
+            id="color"
+          >
+        </label>
+        <label for="time">
+          What time do you go to bed?
+          <input 
+            type="time" 
+            name="time" 
+            id="time"
+          >
+        </label>
+        <label for="cars">
+          What are your favorite brand of cars?
+          <select 
+          name="cars" 
+          id="cars" 
+          multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+        <label class="last" for="range">
+          How do you rate our work?
+          <input 
+            type="range" 
+            name="range" 
+            id="range" 
+            value="0"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>Additional info:</legend>
+        Comments:
+        <textarea 
+          name="comments" 
+          id="comments" 
+          cols="20" 
+          rows="2"
+          autocomplete="off"
+        >
+        </textarea>
+        <label class="recommend" for="recommend">
+          Would you recommend us?
+          <select name="recommend" id="recommend">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
