--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
       <fieldset class="fieldset">
         <legend>Personal information</legend>
-        <label for="surname">
+        <label class="label" for="surname">
           Surname:
           <input 
             type="text" 
@@ -23,7 +23,7 @@
             id="surname"
            >
         </label>
-        <label for="name">
+        <label class="label" for="name">
           Name:
           <input 
             type="text" 
@@ -31,7 +31,7 @@
             id="name"
           >
         </label>
-        <label for="old">
+        <label class="label" for="old">
           How old are You?
           <input 
             type="number" 
@@ -42,7 +42,7 @@
             max="100"
           >
         </label>
-        <label for="date">
+        <label class="label" for="date">
           Full date of birth:
           <input 
             type="date" 
@@ -50,7 +50,7 @@
             id="date"
           >
         </label>
-        <label class="last" for="checkbox">
+        <label class="label" for="checkbox">
           I accept the term of the agreement
           <input 
             type="checkbox" 
@@ -62,7 +62,7 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>Registration</legend>
-        <label for="email">
+        <label class="label" for="email">
           E-mail:
           <input 
             type="email" 
@@ -71,7 +71,7 @@
             placeholder="email@example.com"
           >
         </label>
-        <label class="last" for="pass">
+        <label class="label" for="pass">
           Password:
           <input 
             type="password" 
@@ -84,8 +84,8 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-        <div>
-          <label class="inline">
+        <div class="div">
+          <label class="inline label">
             Do you love cats?
             <label class="inline" >
               <input
@@ -95,7 +95,7 @@
               >
               Yes
             </label>
-            <label class="inline">
+            <label class="inline label">
               <input 
                 type="radio" 
                 name="love" 
@@ -105,7 +105,7 @@
             </label>
           </label>
         </div>
-        <label for="color">
+        <label class="label" for="color">
           What is your favorite color?
           <input 
             type="color" 
@@ -113,7 +113,7 @@
             id="color"
           >
         </label>
-        <label for="time">
+        <label class="label" for="time">
           What time do you go to bed?
           <input 
             type="time" 
@@ -121,7 +121,7 @@
             id="time"
           >
         </label>
-        <label for="cars">
+        <label class="label" for="cars">
           What are your favorite brand of cars?
           <select 
           name="cars" 
@@ -132,7 +132,7 @@
             <option value="Lada">Lada</option>
           </select>
         </label>
-        <label class="last" for="range">
+        <label class="label" for="range">
           How do you rate our work?
           <input 
             type="range" 
@@ -153,7 +153,7 @@
           autocomplete="off"
         >
         </textarea>
-        <label class="recommend" for="recommend">
+        <label class="recommend label" for="recommend">
           Would you recommend us?
           <select name="recommend" id="recommend">
             <option value="yes">yes</option>
